--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
